Change log started August 2009.

April 2011
================================================================================
Smallish changes to the text input class.

March 2011
================================================================================
Added Quixe! :D
Minor changes to allow the Quixe files to be loaded in any order.

February 2011
================================================================================
Fixed issue 155: insert extra spans so that input works even if no prompt printed.
Upgraded to jQuery 1.5. The git version was needed as they broke file:. Gah.
Used the awesome new 1.5 features to add a custom binary dataType.
Used jQuery.when() to rewrite the launcher, which is now extensible.
Get stuff ready for iplayif.com... scrap querystring.js.
Added a very basic search page.

October 2010
================================================================================
Set more header variables.
Fixed some bugs in Gnusto with indirect variables.

September 2010
================================================================================
Added a new load indicator, and the styles for dialogs in general.

June 2010
================================================================================
Backup files must now be wrapped in processBase64Zcode('') so that local file loading will work on Chrome.

May 2010
================================================================================
Completely rewrote line and char input.

April 2010
================================================================================
Fixed undo support, now with multi-undo support.
Added a few fixes for various mobile browsers.
Fixed Enter and arrow key support in menus.

March 2010
================================================================================
 + Zarf made many changes to Gnusto to remove signed data from the memory, and correct for overflows etc.